fix(ProductCardStandard): priceSection gap

--- a/src/components/ProductCardStandard/styles.module.css
+++ b/src/components/ProductCardStandard/styles.module.css
@@ -61,6 +61,7 @@
 .priceSection {
     display: flex;
     flex-direction: column;
+    gap: 15px;
     text-align: center;
 }
 
